[package]
name = "azure_notificationhub_sender"
version = "0.1.0"
authors = ["Bodaway"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["json","blocking"] }
tokio = { version = "0.2.13", features = ["full"] }
chrono = { version = "0.4.11"}
hmac = "0.7.1"
sha2 = "0.8.1"
data-encoding = "2.2.0"
urlparse="0.7.3"